GPC/tests/examples/fail/duplicateFunctions.gpc

int f1() {return 0;}
int f1() {return 0;}

int duplicateFunctions() {
    return 1;
}
